feat:Pending login from Design

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<!-- login Form -->
+<section class="h-100 overflow-hidden">
+    <div class="bg-image">
+        <div class="d-flex justify-content-center align-items-center h-100">
+            <h2>j</h2>
+        </div>
+    </div>
+</section>
