--- a/src/assets/scss/componet/_loginFrom.scss
+++ b/src/assets/scss/componet/_loginFrom.scss
@@ -1,5 +1,33 @@
-.bg-image {
-    background: url('./../../../assets/images/background.png');
-    height: 100%;
+section {
+  .bg-image {
+    background: url("./../../../assets/images/background.png");
     background-size: cover;
+    @media (max-width: 992px) {
+      flex-direction: column;
+    }
+    img{
+      @media (max-width: 576px) {
+        width: 220px;
+        margin-top: 100px;
+      }
+    }
+    .login-from-wrapper {
+      width: 400px;
+      @media (max-width: 576px) {
+        width: 300px;
+        padding: 30px !important;
+
+      }
+    }
+    form{
+      .button{
+        @media (max-width: 576px) {
+         display: flex;
+         justify-content: center;
+         align-items: center;
+  
+        }
+      }
+    }
+  }
 }
