--- a/src/assets/scss/base/_variable.scss
+++ b/src/assets/scss/base/_variable.scss
@@ -3,7 +3,7 @@ $input-btn-padding-y:5px;
 $input-btn-padding-x:14px;
 $input-btn-focus-box-shadow:none;
 $input-border-radius:3px;
-$input-placeholder-color:$secondary;
+$input-placeholder-color:$gray;
 // button
 $btn-padding-y:8px;
 $btn-padding-x:50px;
