--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,1 +1,142 @@
-<p>registration works!</p>
+<!-- Registration Form -->
+<section class="h-100 d-flex justify-content-around align-items-center">
+    <img src="./../../assets/images/1Rhythm_logo.png" alt="1Rhythm-image">
+    <!-- right section Wrapper -->
+    <div class="bg-white registration-from-wrapper p-5">
+        <h3 class="fw-bold">Create Your Account</h3>
+        <span class="mt-2">Already Have a Account? <a href="" class="text-decoration-none"> Sign In</a></span>
+        <!-- Registration from  -->
+        <form>
+            <!-- profile image select Section -->
+            <div class="row">
+                <div class="col-12 my-4">
+                    <label for="select-image" class="position-relative">
+                        <div class="profile-image overflow-hidden">
+                            <img src="./../../assets/images/registration-profile-vector.png" alt="vector-image"
+                                width="w-100 h-100">
+                        </div>
+                        <img src="./../../assets/images/pluse-image.png" alt="pluse-image"
+                            class="pluse-image position-absolute">
+                        <input type="file" id="select-image" class="d-none">
+                    </label>
+                </div>
+            </div>
+            <!-- End profile image select Section -->
+            <!-- First Row -->
+            <div class="row">
+                <!-- FirstName -->
+                <div class="col-12 col-lg-6">
+                    <div class="form-group">
+                        <label for="FirstName" class="fw-bold ">First Name <span class="text-danger"> *</span></label>
+                        <input type="text" class="form-control" id="FirstName" placeholder="First Name">
+                    </div>
+                </div>
+                <!-- End  FirstName -->
+                <!-- Lastname -->
+                <div class="col-12 col-lg-6">
+                    <div class="form-group">
+                        <label for="LastName" class="fw-bold ">Last Name <span class="text-danger"> *</span></label>
+                        <input type="text" class="form-control" id="LastName" placeholder="Last Name">
+                    </div>
+                </div>
+                <!-- End lastName -->
+            </div>
+            <!-- End First Row -->
+
+            <!-- Second Row -->
+            <div class="row">
+                <!-- Email ID -->
+                <div class="col-12 col-lg-6">
+                    <div class="form-group mt-3">
+                        <label for="EmailID" class="fw-bold ">Email Id<span class="text-danger"> *</span></label>
+                        <input type="text" class="form-control" id="EmailID" placeholder="Email ID">
+                    </div>
+                </div>
+                <!-- End  Email ID -->
+                <!-- Password -->
+                <div class="col-12 col-lg-6">
+                    <div class="form-group mt-3">
+                        <label for="Password" class="fw-bold ">Password <span class="text-danger"> *</span></label>
+                        <input type="text" class="form-control" id="Password" placeholder="Password">
+                    </div>
+                </div>
+                <!-- End Password -->
+            </div>
+            <!-- End Second Row -->
+
+            <!-- Third Row -->
+            <div class="row">
+                <!-- Phone Number -->
+                <div class="col-12 col-lg-6">
+                    <div class="form-group mt-3">
+                        <label for="PhoneNumber" class="fw-bold ">Phone Number<span class="text-danger">
+                                *</span></label>
+                        <input type="text" class="form-control" id="PhoneNumber" placeholder="Phone Number">
+                    </div>
+                </div>
+                <!-- End Phone Number -->
+                <!-- userType -->
+                <div class="col-12 col-lg-6">
+                    <div class="form-group mt-3">
+                        <label for="Password" class="fw-bold ">Select User Type <span class="text-danger">
+                                *</span></label>
+                        <ng-select placeholder="Select UserType">
+                            <ng-option *ngFor="let user of userTypes" [value]="user.id">{{user.name}}</ng-option>
+                        </ng-select>
+                    </div>
+                </div>
+                <!-- End userType -->
+            </div>
+            <!-- End Third Row -->
+
+            <!-- Four  Row -->
+            <div class="row">
+                <!-- Select Country -->
+                <div class="col-12 col-lg-6">
+                    <div class="form-group mt-3">
+                        <label for="Country" class="fw-bold ">Select Country<span class="text-danger"> *</span></label>
+                        <ng-select placeholder="india">
+                            <ng-option *ngFor="let user of userTypes" [value]="user.id">{{user.name}}</ng-option>
+                        </ng-select>
+                    </div>
+                </div>
+                <!-- End Select Country  -->
+                <!-- Select State -->
+                <div class="col-6 col-lg-3">
+                    <div class="form-group mt-3">
+                                <div class="form-group mt-3">
+                                    <label for="state" class="fw-bold ">Select State<span class="text-danger"> *</span></label>
+                                    <ng-select placeholder="Select State">
+                                        <ng-option *ngFor="let user of userTypes" [value]="user.id">{{user.name}}</ng-option>
+                                    </ng-select>
+                                </div>
+                    </div>
+                </div>
+                <!-- End State -->
+                <!-- Select City -->
+                <div class="col-6 col-lg-3">
+                    <div class="form-group mt-3">
+                                <div class="form-group mt-3">
+                                    <label for="City" class="fw-bold ">Select City<span class="text-danger"> *</span></label>
+                                    <ng-select placeholder="Select City" >
+                                        <ng-option *ngFor="let user of userTypes" [value]="user.id">{{user.name}}</ng-option>
+                                    </ng-select>
+                                </div>
+                    </div>
+                </div>
+                <!-- End City -->
+            </div>
+            <!-- End Four Row -->
+            <!-- status section -->
+            <div class="row">
+                <div class="col-12 mt-5">
+                   <span class="fw-bold d-flex align-items-center">Note: <span class="fw-lighter ps-1"> Please Add Your studion Information In the Manage  </span></span> 
+                </div>
+            </div>
+            <div class="button my-3">
+                <button type="submit" class="btn btn-primary btn-gradient border-0">Sign Up</button>
+            </div>
+        </form>
+    </div>
+</section>
+<!-- End  Registration Form -->
