--- a/src/assets/scss/base/_variable.scss
+++ b/src/assets/scss/base/_variable.scss
@@ -4,6 +4,8 @@ $input-btn-padding-x:14px;
 $input-btn-focus-box-shadow:none;
 $input-border-radius:3px;
 $input-placeholder-color:$gray;
+$input-btn-font-size: 15px;
+
 // button
 $btn-padding-y:8px;
 $btn-padding-x:50px;
@@ -14,6 +16,5 @@ $btn-font-size:13px;
 // text Font-weight
 $font-weight-lighter:400;
 $font-weight-light:500;
-$font-weight-normal:600;
 $font-weight-bold:700;
 $font-weight-bolder:800;
