feat:Responsive pending

--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -1,1 +1,109 @@
-<p>header works!</p>
+<!-- start Header -->
+<header>
+  <div
+    class="d-flex justify-content-between align-items-center p-2 border border-bottom"
+  >
+    <!-- 1rhythm Logo -->
+    <div class="logo ms-3">
+      <img
+        src="./../../../../assets/images/1Rhythm logo.svg"
+        alt="1Rhythm logo"
+      />
+    </div>
+    <!-- End 1rhythm Logo -->
+
+    <!-- desktop -->
+    <div class="d-none d-lg-block">
+      <ul class="nav">
+        <li class="nav-item d-flex align-items-center">
+          <span>
+            <img src="./../../../../assets/images/home.svg" alt="home-icon" />
+          </span>
+          <a href="http://"
+            ><span class="nav-link fw-light ms-2 text-primary">Home</span></a
+          >
+        </li>
+        <li class="nav-item d-flex align-items-center ms-4">
+          <span
+            ><img
+              src="./../../../../assets/images/Studio.svg"
+              alt="studio-icon"
+          /></span>
+          <a href="http://"
+            ><span class="nav-link fw-light ms-2">Studio</span></a
+          >
+        </li>
+        <li class="nav-item d-flex align-items-center ms-4">
+          <span
+            ><img
+              src="./../../../../assets/images/noun-artist-1191144 1.svg"
+              alt="Artist-icon"
+          /></span>
+          <a href="http://"
+            ><span class="nav-link fw-light ms-2">Artist</span></a
+          >
+        </li>
+        <li class="nav-item d-flex align-items-center ms-4">
+          <span
+            ><img
+              src="./../../../../assets/images/noun-calendar-2095603 4.svg"
+              alt="BookingHistory-icon"
+          /></span>
+          <a href="http://"
+            ><span class="nav-link fw-light ms-2">Booking History</span></a
+          >
+        </li>
+      </ul>
+    </div>
+    <!-- Profile Image -->
+    <div class="profile-image overflow-hidden d-none d-lg-block me-3">
+      <img
+        src="./../../../../assets/images/Profile.png"
+        alt="profile-image"
+        class="w-100 h-auto"
+      />
+    </div>
+    <!-- desktop -->
+    <!-- mobile -->
+    <label class="menu me-3 d-block d-lg-none" for="menuOpen">
+      <img src="./../../../../assets/images/menu.svg" alt="menu" />
+    </label>
+  </div>
+  <!-- End Header -->
+    <!-- mobile -->
+  <div class="text-white h-100">
+    <input type="checkbox" id="menuOpen" class="d-none" />
+    <aside class="sidebar bg-white h-25 w-100 d-flex justify-content-start align-items-center">
+        <ul class="d-block d-flex flex-column align-items-center ">
+           <!-- Profile Image -->
+    <div class="profile-image overflow-hidden mt-5">
+      <img
+        src="./../../../../assets/images/Profile.png"
+        alt="profile-image"
+        class="w-100 h-auto"
+      />
+    </div>
+             <li class="nav-item d-flex align-items-center text-white mt-4">
+                <span>
+                    <img src="./../../../../assets/images/home.svg" alt="home-icon">
+                </span>
+                <a href="http://"><span class="nav-link fw-light ms-2 text-primary ">Home</span></a>
+            </li>
+            <li class=" nav-item d-flex align-items-center mt-4">
+                <span><img src="./../../../../assets/images/Studio.svg" alt="studio-icon" ></span>
+                <a href="http://"><span class="nav-link fw-light  text-black">Studio</span></a>
+            </li>
+            <li class="nav-item d-flex align-items-center mt-4">
+                <span><img src="./../../../../assets/images/noun-artist-1191144 1.svg" alt="Artist-icon"></span>
+                <a href="http://"><span class="nav-link fw-light  text-black">Artist</span></a>
+            </li>
+            <li class="nav-item d-flex align-items-center">
+                <span><img src="./../../../../assets/images/noun-calendar-2095603 4.svg"
+                        alt="BookingHistory-icon"></span>
+                <a href="http://"><span class="nav-link fw-light text-black ">Booking History</span></a>
+            </li>
+        </ul>
+    </aside>
+  </div>
+  <!-- mobile -->
+</header>
