--- a/src/assets/scss/vandar/_component-bootstrap.scss
+++ b/src/assets/scss/vandar/_component-bootstrap.scss
@@ -10,3 +10,5 @@
 @import "../../../../node_modules/bootstrap/scss/buttons";
 @import "../../../../node_modules/bootstrap/scss/forms";
 @import "../../../../node_modules/bootstrap/scss/images";
+@import "../../../../node_modules/bootstrap/scss/navbar";
+@import "../../../../node_modules/bootstrap/scss/nav";
