--- a/src/assets/icons/style.css
+++ b/src/assets/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: '1rhythm';
-  src:  url('fonts/1rhythm.eot?vv65v');
-  src:  url('fonts/1rhythm.eot?vv65v#iefix') format('embedded-opentype'),
-    url('fonts/1rhythm.ttf?vv65v') format('truetype'),
-    url('fonts/1rhythm.woff?vv65v') format('woff'),
-    url('fonts/1rhythm.svg?vv65v#1rhythm') format('svg');
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?yjnzo2');
+  src:  url('fonts/icomoon.eot?yjnzo2#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?yjnzo2') format('truetype'),
+    url('fonts/icomoon.woff?yjnzo2') format('woff'),
+    url('fonts/icomoon.svg?yjnzo2#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -12,7 +12,7 @@
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: '1rhythm' !important;
+  font-family: 'icomoon' !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
@@ -25,69 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-heart:before {
-  content: "\e903";
-}
-.icon-eye-slash-fill:before {
-  content: "\e916";
-}
-.icon-eye-fill:before {
-  content: "\e915";
-}
-.icon-Right-arrow:before {
-  content: "\e912";
-}
-.icon-artists:before {
-  content: "\e904";
-}
-.icon-heart-fill:before {
-  content: "\e906";
-}
-.icon-microphone:before {
-  content: "\e907";
-}
-.icon-delete:before {
-  content: "\e908";
-}
-.icon-musical:before {
-  content: "\e909";
-}
-.icon-calender:before {
-  content: "\e90a";
-}
-.icon-hardware:before {
-  content: "\e90b";
-}
-.icon-Prices:before {
-  content: "\e90c";
-}
-.icon-Address:before {
-  content: "\e90d";
-}
-.icon-Down-arrow:before {
-  content: "\e90e";
-}
-.icon-Add .path1:before {
-  content: "\e90f";
-  color: rgb(13, 15, 20);
-}
-.icon-Add .path2:before {
-  content: "\e910";
-  margin-left: -1.0419921875em;
-  color: rgb(255, 255, 255);
-}
-.icon-Left-arrow:before {
-  content: "\e913";
-}
-.icon-Booking-history:before {
-  content: "\e914";
+.icon-menu:before {
+  content: "\e9bd";
 }
 .icon-close:before {
-  content: "\e902";
-}
-.icon-studios:before {
-  content: "\e900";
-}
-.icon-home:before {
-  content: "\e901";
+  content: "\ea0f";
 }
