feat:carousel pendding

--- a/src/app/home-container/home-presentation/home-presentation.component.html
+++ b/src/app/home-container/home-presentation/home-presentation.component.html
@@ -1,1 +1,36 @@
-<p>home-presentation works!</p>
+<section class="bg-red">
+    <div class="carausel-wrapper w-100 ">
+        <ngb-carousel [showNavigationArrows]="false" [interval]="6000">
+            <ng-template ngbSlide>
+                <div class="picsum-img-wrapper overflow-hidden">
+                    <img src="./../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash 1.svg" alt="Random first slide"
+                        class="w-100 h-100" />
+                </div>
+                <div class="carousel-caption">
+                    <h3>First slide label</h3>
+                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                </div>
+            </ng-template>
+            <ng-template ngbSlide>
+                <div class="picsum-img-wrapper overflow-hidden">
+                    <img src="./../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash-2.svg" alt="Random second slide"
+                        class="w-100 h-100" />
+                </div>
+                <div class="carousel-caption">
+                    <h3>Second slide label</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </ng-template>
+            <ng-template ngbSlide>
+                <div class="picsum-img-wrapper overflow-hidden">
+                    <img src="./../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash-3.svg" alt="Random third slide"
+                        class="w-100 h-100" />
+                </div>
+                <div class="carousel-caption">
+                    <h3>Third slide label</h3>
+                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                </div>
+            </ng-template>
+        </ngb-carousel>
+    </div>
+</section>
