--- a/src/assets/scss/vandar/_component-bootstrap.scss
+++ b/src/assets/scss/vandar/_component-bootstrap.scss
@@ -1,4 +1,3 @@
-
 // Optional components
 @import "../../../../node_modules/bootstrap/scss/utilities";
 @import "../../../../node_modules/bootstrap/scss/reboot";
@@ -12,3 +11,4 @@
 @import "../../../../node_modules/bootstrap/scss/images";
 @import "../../../../node_modules/bootstrap/scss/navbar";
 @import "../../../../node_modules/bootstrap/scss/nav";
+@import "../../../../node_modules/bootstrap/scss/carousel";
