--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,5 +1,5 @@
 <!-- Registration Form -->
-<section class="h-100 d-flex justify-content-around align-items-center">
+<section class="bg-image h-100 d-flex justify-content-around align-items-center">
         <img src="./../../assets/images/1Rhythm_logo.png" alt="1Rhythm-image " class="img-fluid Rhythm-image " >   
     <!-- right section Wrapper -->
     <div class="bg-white registration-from-wrapper p-4 p-lg-5">
