--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -44,6 +44,9 @@ body {
     .fs-7{
          font-size: 14px;
     }
+    .fs-8{
+      font-size: 12px;
+ }
   // Cancel X display none
   .ng-select .ng-clear-wrapper{
     display: none;
