--- a/src/assets/scss/componet/_registration-form.scss
+++ b/src/assets/scss/componet/_registration-form.scss
@@ -1,6 +1,8 @@
 section{
-    background-image: url('./../../../assets/images/background.png');
-    background-repeat: no-repeat;
+    .bg-image{
+        background-image: url('./../../../assets/images/background.png');
+        background-repeat: no-repeat;
+    }
    .Rhythm-image{
         @media (max-width: 992px) {
             width: 250px;
