--- a/src/app/home-container/home-presentation/home-presentation.component.html
+++ b/src/app/home-container/home-presentation/home-presentation.component.html
@@ -1,36 +1,68 @@
-<section class="bg-red">
-    <div class="carausel-wrapper w-100 ">
-        <ngb-carousel [showNavigationArrows]="false" [interval]="6000">
-            <ng-template ngbSlide>
-                <div class="picsum-img-wrapper overflow-hidden">
-                    <img src="./../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash 1.svg" alt="Random first slide"
-                        class="w-100 h-100" />
-                </div>
-                <div class="carousel-caption">
-                    <h3>First slide label</h3>
-                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                </div>
-            </ng-template>
-            <ng-template ngbSlide>
-                <div class="picsum-img-wrapper overflow-hidden">
-                    <img src="./../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash-2.svg" alt="Random second slide"
-                        class="w-100 h-100" />
-                </div>
-                <div class="carousel-caption">
-                    <h3>Second slide label</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-            </ng-template>
-            <ng-template ngbSlide>
-                <div class="picsum-img-wrapper overflow-hidden">
-                    <img src="./../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash-3.svg" alt="Random third slide"
-                        class="w-100 h-100" />
-                </div>
-                <div class="carousel-caption">
-                    <h3>Third slide label</h3>
-                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                </div>
-            </ng-template>
-        </ngb-carousel>
+<main>
+    <div class="container">
+        <div class="row gx-0">
+            <!-- Carousel starts here -->
+            <ngb-carousel class="col carousel-wrapper overflow-hidden" [showNavigationArrows]="false" [interval]="6000">
+                <!-- Displaying dynamic data using iteration -->
+                <ng-template ngbSlide>
+                    <!-- Adding background image of caousel -->
+                    <div class="picsum-img-wrapper position-relative">
+                        <img src="./../../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash 1.svg" class="h-100 w-100">
+                    </div>
+                    <!-- Text to display on carousel -->
+                    <div class="text-wrapper position-absolute top-0 h-100  pt-5  ps-4 text-white">
+                        <div class="text-white">
+                            <span class="text-uppercase text-secondary-gray fs-8">Most Popular</span>
+                        </div>
+                        <span class="text-uppercase fs-3 fw-bold ">Creative space<span class="text-uppercase user-name">
+                                Studio</span></span>
+                        <div class="w-75 mt-3 text-secondary-gray">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Iure dolorem cumque consequatur illum non quidem incidunt quasi.</div>
+                        <div class="button my-5 my-lg-4 d-flex justify-content-center justify-content-sm-start">
+                            <button type="submit" class="btn btn-primary btn-gradient border-0 ">View Details</button>
+                        </div>
+                    </div>
+                </ng-template>
+                <ng-template ngbSlide>
+                    <!-- Adding background image of caousel -->
+                    <div class="picsum-img-wrapper position-relative">
+                        <img src="./../../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash-2.svg" class="h-100 w-100">
+                    </div>
+                    <!-- Text to display on carousel -->
+                    <div class="text-wrapper position-absolute top-0 h-100  pt-5 ps-4  text-white">
+                        <div class="text-white">
+                            <span class="text-uppercase text-secondary-gray fs-8">Most Popular</span>
+                        </div>
+                        <span class="text-uppercase fs-3 fw-bold ">Creative space<span class="text-uppercase user-name">
+                                Artist</span></span>
+                        <div class="w-75 mt-3 text-secondary-gray">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Iure dolorem cumque consequatur illum non quidem incidunt quasi.</div>
+                        <div class="button my-5 my-lg-4 d-flex justify-content-center justify-content-sm-start">
+                            <button type="submit" class="btn btn-primary btn-gradient border-0 ">View Details</button>
+                        </div>
+                    </div>
+                </ng-template>
+                <ng-template ngbSlide>
+                    <!-- Adding background image of caousel -->
+                    <div class="picsum-img-wrapper position-relative">
+                        <img src="./../../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash-3.svg" class="h-100 w-100">
+                    </div>
+                    <!-- Text to display on carousel -->
+                    <div class="text-wrapper position-absolute top-0 h-100  pt-5 ps-4 text-white">
+                        <div class="text-white">
+                            <span class="text-uppercase text-secondary-gray fs-8">Most Popular</span>
+                        </div>
+                        <span class="text-uppercase fs-3 fw-bold ">Creative space<span class="text-uppercase user-name">
+                                Studio</span></span>
+                        <div class="w-75 mt-3 text-secondary-gray">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Iure dolorem cumque consequatur illum non quidem incidunt quasi.</div>
+                        <div class="button my-5 my-lg-4 d-flex justify-content-center justify-content-sm-start">
+                            <button type="submit" class="btn btn-primary btn-gradient border-0 ">View Details</button>
+                        </div>
+                    </div>
+                </ng-template>
+            </ngb-carousel>
+            <!-- End of carousel -->
+        </div>
     </div>
-</section>
+</main>
