--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,24 +1,17 @@
 header {
     .logo {
         img {
-            width: 150px;
-
-
+            width:$header-logo-image-width;
             @media (max-width: 992px) {
-                width: 100px;
-            }
-
-            @media (max-width: 576px) {
-                width: 100px;
+                width: $header-logo-image-width-lg;
             }
 
         }
     }
-
     .profile-image {
-        width: 50px;
-        height: 50px;
-        border-radius: 50px;
+        width: $profile-image-width;
+        height: $profile-image-height;
+        border-radius: $profile-image-Border-radius;
     }
 }
 
@@ -26,9 +19,9 @@ header {
     position: absolute;
     transition: all 0.5s ease-in-out;
     left: 100%;
-    z-index: 100;
+     z-index: 100;
 }
 
 #menuOpen:checked+.sidebar {
-    left: 0;
+      left: 0;
 }
