feat:carousel Design-with Responsivness

--- a/src/app/home-container/home-presentation/home-presentation.component.html
+++ b/src/app/home-container/home-presentation/home-presentation.component.html
@@ -3,64 +3,70 @@
         <div class="row gx-0">
             <!-- Carousel starts here -->
             <ngb-carousel class="col carousel-wrapper overflow-hidden" [showNavigationArrows]="false" [interval]="6000">
-                <!-- Displaying dynamic data using iteration -->
-                <ng-template ngbSlide>
-                    <!-- Adding background image of caousel -->
-                    <div class="picsum-img-wrapper position-relative">
-                        <img src="./../../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash 1.svg" class="h-100 w-100">
+                
+               <!-- Displaying dynamic data using iteration -->
+               <ng-template ngbSlide>
+                <!-- Adding background image of caousel -->
+                <div class="picsum-img-wrapper position-relative">
+                    <img src="./../../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash 1.svg" class="h-100 w-100">
+                </div>
+                <!-- Text to display on carousel -->
+                <div class="text-wrapper position-absolute top-0 h-100  pt-3 pt-sm-5  ps-4 text-white">
+                    <div class="text-white pb-2 pt-sm-0">
+                        <span class="text-uppercase text-secondary-gray fs-8">Most Popular</span>
                     </div>
-                    <!-- Text to display on carousel -->
-                    <div class="text-wrapper position-absolute top-0 h-100  pt-5  ps-4 text-white">
-                        <div class="text-white">
-                            <span class="text-uppercase text-secondary-gray fs-8">Most Popular</span>
-                        </div>
-                        <span class="text-uppercase fs-3 fw-bold ">Creative space<span class="text-uppercase user-name">
-                                Studio</span></span>
-                        <div class="w-75 mt-3 text-secondary-gray">Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Iure dolorem cumque consequatur illum non quidem incidunt quasi.</div>
-                        <div class="button my-5 my-lg-4 d-flex justify-content-center justify-content-sm-start">
-                            <button type="submit" class="btn btn-primary btn-gradient border-0 ">View Details</button>
-                        </div>
+                    <span class=" text-user-name text-uppercase fw-bold">Creative space
+                        <span class="text-uppercase user-name"> Studio</span>
+                        </span>
+                    <div class="w-75 text-description mt-3 text-secondary-gray d-none d-sm-block">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Iure dolorem cumque consequatur illum non quidem incidunt quasi.</div>
+                    <div class="button my-3 my-md-4 d-flex justify-content-start justify-content-sm-start">
+                        <button type="submit" class="btn btn-primary btn-gradient border-0 text-nowrap ">View Details</button>
                     </div>
-                </ng-template>
-                <ng-template ngbSlide>
-                    <!-- Adding background image of caousel -->
-                    <div class="picsum-img-wrapper position-relative">
-                        <img src="./../../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash-2.svg" class="h-100 w-100">
+                </div>
+            </ng-template>
+            <!-- Displaying dynamic data using iteration -->
+            <ng-template ngbSlide>
+                <!-- Adding background image of caousel -->
+                <div class="picsum-img-wrapper position-relative">
+                    <img src="./../../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash-2.svg" class="h-100 w-100">
+                </div>
+                <!-- Text to display on carousel -->
+                <div class="text-wrapper position-absolute top-0 h-100  pt-3 pt-sm-5  ps-4 text-white">
+                    <div class="text-white pb-2 pt-sm-0">
+                        <span class="text-uppercase text-secondary-gray fs-8">Most Popular</span>
                     </div>
-                    <!-- Text to display on carousel -->
-                    <div class="text-wrapper position-absolute top-0 h-100  pt-5 ps-4  text-white">
-                        <div class="text-white">
-                            <span class="text-uppercase text-secondary-gray fs-8">Most Popular</span>
-                        </div>
-                        <span class="text-uppercase fs-3 fw-bold ">Creative space<span class="text-uppercase user-name">
-                                Artist</span></span>
-                        <div class="w-75 mt-3 text-secondary-gray">Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Iure dolorem cumque consequatur illum non quidem incidunt quasi.</div>
-                        <div class="button my-5 my-lg-4 d-flex justify-content-center justify-content-sm-start">
-                            <button type="submit" class="btn btn-primary btn-gradient border-0 ">View Details</button>
-                        </div>
+                    <span class=" text-user-name text-uppercase fw-bold">Creative space
+                        <span class="text-uppercase user-name"> Studio</span>
+                        </span>
+                    <div class="w-75 text-description mt-3 text-secondary-gray d-none d-sm-block">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Iure dolorem cumque consequatur illum non quidem incidunt quasi.</div>
+                    <div class="button my-3 my-md-4 d-flex justify-content-start justify-content-sm-start">
+                        <button type="submit" class="btn btn-primary btn-gradient border-0 text-nowrap ">View Details</button>
                     </div>
-                </ng-template>
-                <ng-template ngbSlide>
-                    <!-- Adding background image of caousel -->
-                    <div class="picsum-img-wrapper position-relative">
-                        <img src="./../../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash-3.svg" class="h-100 w-100">
+                </div>
+            </ng-template>
+            <!-- Displaying dynamic data using iteration -->
+            <ng-template ngbSlide>
+                <!-- Adding background image of caousel -->
+                <div class="picsum-img-wrapper position-relative">
+                    <img src="./../../../assets/images/jesman-fabio-1zwJqd5cNys-unsplash-3.svg" class="h-100 w-100">
+                </div>
+                <!-- Text to display on carousel -->
+                <div class="text-wrapper position-absolute top-0 h-100  pt-3 pt-sm-5  ps-4 text-white">
+                    <div class="text-white pb-2 pt-sm-0">
+                        <span class="text-uppercase text-secondary-gray fs-8">Most Popular</span>
                     </div>
-                    <!-- Text to display on carousel -->
-                    <div class="text-wrapper position-absolute top-0 h-100  pt-5 ps-4 text-white">
-                        <div class="text-white">
-                            <span class="text-uppercase text-secondary-gray fs-8">Most Popular</span>
-                        </div>
-                        <span class="text-uppercase fs-3 fw-bold ">Creative space<span class="text-uppercase user-name">
-                                Studio</span></span>
-                        <div class="w-75 mt-3 text-secondary-gray">Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Iure dolorem cumque consequatur illum non quidem incidunt quasi.</div>
-                        <div class="button my-5 my-lg-4 d-flex justify-content-center justify-content-sm-start">
-                            <button type="submit" class="btn btn-primary btn-gradient border-0 ">View Details</button>
-                        </div>
+                    <span class=" text-user-name text-uppercase fw-bold">Creative space
+                        <span class="text-uppercase user-name"> Studio</span>
+                        </span>
+                    <div class="w-75 text-description mt-3 text-secondary-gray d-none d-sm-block">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Iure dolorem cumque consequatur illum non quidem incidunt quasi.</div>
+                    <div class="button my-3 my-md-4 d-flex justify-content-start justify-content-sm-start">
+                        <button type="submit" class="btn btn-primary btn-gradient border-0 text-nowrap ">View Details</button>
                     </div>
-                </ng-template>
+                </div>
+            </ng-template>
             </ngb-carousel>
             <!-- End of carousel -->
         </div>
