--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -3,6 +3,9 @@
     border-radius: $carousel-radius;
     .picsum-img-wrapper {
         height:$carousel-img-height;
+      @media (max-width: 576px) {
+        height:$carousel-img-height-sm;
+      }
         img {
              object-fit: cover;
         }
@@ -11,12 +14,25 @@
       background: $carousel-bag;
       border-radius: $carousel-radius;
       width: $carousel-content-width;
+      .text-user-name{
+        font-size: $carousel-text-user-name;
+        @media (max-width: 576px) {
+          font-size: $carousel-text-user-name-sm;
+        }
+       
+      }
       .user-name {
         background:$user-name-gradient;
         background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-stroke: 2.4px transparent;
         color: $dark;
+      }
+      button{
+        @media (max-width: 576px) {
+          padding-left:$btn-padding-left-sm ;
+          padding-right: $btn-padding-right-sm;
+        }
       }
     }
 }
