--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -1,6 +1,6 @@
 <!-- start Header -->
 <header>
-  <div class="d-flex justify-content-between align-items-center p-2 border border-bottom">
+  <div class="d-flex justify-content-between align-items-center p-2">
     <!-- 1rhythm Logo -->
     <div class="logo ms-3">
       <img src="./../../../../assets/images/1Rhythm logo.svg" alt="1Rhythm logo" />
